--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,10 +11,16 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
+
+
         <TextBlock TextWrapping="Wrap" Margin="5">
             Данная страница находится в оконном приложении
         </TextBlock>
         <Frame Grid.Column="1" Source="Page1.xaml" Margin="3" BorderBrush="LimeGreen" BorderThickness="2"></Frame>
+        <Canvas>
+            <Button x:Name="button1" Content="Открыть задание 1" Height="25" Canvas.Top="75" Canvas.Left="100" Click="button1_Click"/>
+            <Button x:Name="button2" Content="Открыть задание 2" Height="25" Canvas.Top="110" Canvas.Left="100" Click="button2_Click"/>
+        </Canvas>
     </Grid>
-
+    
 </Window>
