--- a/Window1.xaml
+++ b/Window1.xaml
@@ -5,8 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Kuznetsov_PR5"
         mc:Ignorable="d"
-        Title="Window1" Height="450" Width="800">
+        Title="Задание 1" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="73*"/>
+            <RowDefinition Height="346*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="46*"/>
+            <ColumnDefinition Width="107*"/>
+            <ColumnDefinition Width="45*"/>
+        </Grid.ColumnDefinitions>
+        <Label Content="MainWindow" Grid.RowSpan="2" Grid.Column="0">
+            <Label.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF0E8BF3" Offset="1"/>
+                    <GradientStop Color="#FFFDFDFD"/>
+                </LinearGradientBrush>
+            </Label.Background>
+        </Label>
+        <Frame Grid.Column="1" Grid.ColumnSpan="2" Source="Page3.xaml" Margin="3" BorderBrush="LimeGreen" BorderThickness="2">
+            <Frame.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF0E8BF3" Offset="1"/>
+                    <GradientStop Color="#FFFDFDFD"/>
+                </LinearGradientBrush>
+            </Frame.Background>
+        </Frame>
+        <Frame Grid.Column="1" Grid.Row="2" Source="Page4.xaml" Margin="3" BorderBrush="LimeGreen" BorderThickness="2">
+            <Frame.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF0E8BF3" Offset="1"/>
+                    <GradientStop Color="#FFFDFDFD"/>
+                </LinearGradientBrush>
+            </Frame.Background>
+        </Frame>
+        <Frame Grid.Column="2" Grid.Row="2" Source="Page5.xaml" Margin="3" BorderBrush="LimeGreen" BorderThickness="2">
+            <Frame.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF0E8BF3" Offset="1"/>
+                    <GradientStop Color="#FFFDFDFD"/>
+                </LinearGradientBrush>
+            </Frame.Background>
+        </Frame>
     </Grid>
 </Window>
