Почти выполнено задание 5

--- a/Window5.xaml
+++ b/Window5.xaml
@@ -10,7 +10,22 @@
         <TabControl HorizontalAlignment="Left" Height="419" VerticalAlignment="Top" Width="792">
             <TabItem Header="Настройка сети" BorderBrush="White" Background="#27292e" Foreground="#838487">
                 <Grid Background="#27292e">
-                    <GroupBox Header="Натсройка Сети" BorderBrush="White" FontSize="15" Foreground="White" HorizontalAlignment="Left" Height="369" Margin="10,10,0,0" VerticalAlignment="Top" Width="186"/>
+                    <GroupBox Header="Настройка Сети" BorderBrush="White" FontSize="15" Foreground="White" HorizontalAlignment="Left" Height="369" Margin="10,10,0,0" VerticalAlignment="Top" Width="186">
+                        <Grid>
+                            <Canvas>
+                                <Button Content="fdhd" Height="25" />
+                                <Button Content="fdhd" Height="25" />
+                                <Button Content="fdhd" Height="25" />
+                                <Button Content="fdhd" Height="25" />
+                                <Button Content="fdhd" Height="25" />
+                                <Button Content="fdhd" Height="25" />
+                                <Button Content="fdhd" Height="25" />
+                                <Button Content="fdhd" Height="25" />
+                                <Button Content="fdhd" Height="25" />
+                            </Canvas>
+                        </Grid>
+                    </GroupBox>
+
                     <GroupBox Header="МД с сети" BorderBrush="White" FontSize="15" Foreground="White" HorizontalAlignment="Left" Height="369" Margin="201,10,0,0" VerticalAlignment="Top" Width="573">
                         <Frame Source="Page10.xaml" Margin="0,25,0,0"/>
                     </GroupBox>
@@ -22,6 +37,5 @@
                 </Grid>
             </TabItem>
         </TabControl>
-
     </Grid>
 </Window>
